# Teeth-a-majigger

./: .gitignore  CMakeLists.txt
teeth-a-majigger/: CMakeLists.txt
teeth-a-majigger/include/capture/: Camera.h  VideoCaptureManager.h
teeth-a-majigger/include/processing/: FrameProcessor.h  SmileDetector.h
teeth-a-majigger/include/utils/: FileUtil.h
teeth-a-majigger/include/visualisation/: Visualiser.h
teeth-a-majigger/src/: main.cpp
teeth-a-majigger/src/capture/: Camera.cpp  VideoCaptureManager.cpp
teeth-a-majigger/src/processing/: FrameProcessor.cpp  SmileDetector.cpp
teeth-a-majigger/src/visualisation/: Visualiser.cpp
